--- a/GradingSystem/View/Admin/ManageStudents.xaml
+++ b/GradingSystem/View/Admin/ManageStudents.xaml
@@ -69,9 +69,7 @@
 
                                     <DataGridTextColumn Header="StudentID" IsReadOnly="True" CanUserResize="False" Width="100" Binding="{Binding StudentId}"/>
                                     <DataGridTextColumn Header="Name" CanUserResize="False" Binding="{Binding StudentName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Program" CanUserResize="False" Binding="{Binding Program.ProgramName}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Year Level" CanUserResize="False" Binding="{Binding YearLevel}" IsReadOnly="True" Width="*"/>
-                                    <DataGridTextColumn Header="Semester" CanUserResize="False" Binding="{Binding Semester}" IsReadOnly="True" Width="*"/>
+                                    <DataGridTextColumn Header="Email" CanUserResize="False" Binding="{Binding Email}" IsReadOnly="True" Width="*"/>
                                     <DataGridTemplateColumn Header="CreatedAt" CanUserResize="False" IsReadOnly="True" Width="*">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
