--- a/GradingSystem/View/Admin/Dialogs/EnrollStudent.xaml
+++ b/GradingSystem/View/Admin/Dialogs/EnrollStudent.xaml
@@ -110,7 +110,14 @@
                                         <TextBox x:Name="idTxt" Style="{StaticResource MaterialDesignFilledTextBox}" 
                                              Margin="30 0 0 0" Height="25" Width="200" FontSize="15" HorizontalAlignment="left"
                                              Grid.Column="1" Grid.Row="0" Padding="10 0 0 0"
-                                             PreviewTextInput="IdTxt_PreviewTextInput" />
+                                             PreviewTextInput="IdTxt_PreviewTextInput" TextChanged="idTxt_TextChanged" />
+                                        
+                                        <!-- Name -->
+                                        <TextBlock Grid.Row="1" Text="First Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBox x:Name="NameTxt" Style="{StaticResource MaterialDesignFilledTextBox}"
+         HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" 
+         Grid.Column="1" Grid.Row="1" Padding="10 0 0 0" IsReadOnly="True">
+                                        </TextBox>
 
                                         <!-- Program -->
                                         <TextBlock Grid.Row="4" Text="Program" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
