--- a/GradingSystem/View/Admin/EditStudent.xaml
+++ b/GradingSystem/View/Admin/EditStudent.xaml
@@ -104,21 +104,21 @@
 
                                         <!-- Student ID -->
                                         <TextBlock Text="Student ID" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <TextBox x:Name="idTxt" Text="{Binding SelectedStudent.StudentId}" Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                        <TextBox x:Name="idTxt" Text="{Binding StudentId}" Style="{StaticResource MaterialDesignFilledTextBox}" 
                                           Margin="30 0 0 0" Height="25" Width="200" FontSize="15" HorizontalAlignment="left"
                                           Grid.Column="1" Grid.Row="0" Padding="10 0 0 0"
                                           PreviewTextInput="IdTxt_PreviewTextInput" />
 
                                         <!-- First Name -->
                                         <TextBlock Grid.Row="1" Text="First Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <TextBox x:Name="FnameTxt" Text="{Binding SelectedStudent.FirstName}" Style="{StaticResource MaterialDesignFilledTextBox}"
+                                        <TextBox x:Name="FnameTxt" Text="{Binding FirstName}" Style="{StaticResource MaterialDesignFilledTextBox}"
                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" 
                                           Grid.Column="1" Grid.Row="1" Padding="10 0 0 0" PreviewTextInput="FnameTxt_PreviewTextInput">
                                         </TextBox>
 
                                         <!-- Last Name -->
                                         <TextBlock Grid.Row="2" Text="Last Name" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <TextBox x:Name="LnameTxt" Text="{Binding SelectedStudent.LastName}" Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                        <TextBox x:Name="LnameTxt" Text="{Binding LastName}" Style="{StaticResource MaterialDesignFilledTextBox}" 
                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
                                           Grid.Column="1" Grid.Row="2" Padding="10 0 0 0"
                                           PreviewTextInput="LnameTxt_PreviewTextInput">
@@ -126,50 +126,9 @@
 
                                         <!-- Email Address -->
                                         <TextBlock Grid.Row="3" Text="Email Address" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <TextBox x:Name="emailTxt" Text="{Binding SelectedStudent.Email}"  Style="{StaticResource MaterialDesignFilledTextBox}" 
+                                        <TextBox x:Name="emailTxt" Text="{Binding Email}"  Style="{StaticResource MaterialDesignFilledTextBox}" 
                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
                                           Grid.Column="1" Grid.Row="3" Padding="10 0 0 0" PreviewTextInput="emailTxt_PreviewTextInput"/>
-
-                                        <!-- Program -->
-                                        <TextBlock Grid.Row="4" Text="Program" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <ComboBox x:Name="programCmb" SelectedValue="{Binding SelectedStudent.ProgramId}" Style="{StaticResource MaterialDesignFilledComboBox}" 
-                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15" SelectedValuePath="ProgramId"
-                                           Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Programs}"
-                                           DisplayMemberPath="ProgramName" Padding="10 0 10 0">
-                                        </ComboBox>
-
-                                        <!-- Year -->
-                                        <TextBlock Grid.Row="5" Text="Year" VerticalAlignment="Center" 
-                                            HorizontalAlignment="Right" Margin="15"/>
-                                        <ComboBox x:Name="yearCmb" Text="{Binding SelectedStudent.YearLevel}" Style="{StaticResource MaterialDesignFilledComboBox}" 
-                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
-                                           Grid.Column="1" Grid.Row="5" 
-                                           SelectedValuePath="Content" Padding="10 0 10 0">
-
-                                            <ComboBoxItem>First Year</ComboBoxItem>
-                                            <ComboBoxItem>Second Year</ComboBoxItem>
-                                            <ComboBoxItem>Third Year</ComboBoxItem>
-                                            <ComboBoxItem>Fourth Year</ComboBoxItem>
-                                        </ComboBox>
-
-                                        <!-- Semester -->
-                                        <TextBlock Grid.Row="6" Text="Semester" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <ComboBox x:Name="semesterCmb" Text="{Binding SelectedStudent.Semester}" Style="{StaticResource MaterialDesignFilledComboBox}" 
-                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
-                                           Grid.Column="1" Grid.Row="6" SelectedValuePath="Content" Padding="10 0 10 0">
-                                            <ComboBoxItem>First Semester</ComboBoxItem>
-                                            <ComboBoxItem>Second Semester</ComboBoxItem>
-                                        </ComboBox>
-
-                                        <!-- Status -->
-                                        <TextBlock Grid.Row="7" Text="Status" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <ComboBox x:Name="scholarCmb" Text="{Binding SelectedStudent.Status}"
-                                                  Style="{StaticResource MaterialDesignFilledComboBox}" 
-                                           HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
-                                           Grid.Column="1" Grid.Row="7" SelectedValuePath="Content" Padding="10 0 10 0">
-                                            <ComboBoxItem>Non-Scholar</ComboBoxItem>
-                                            <ComboBoxItem>Scholar</ComboBoxItem>
-                                        </ComboBox>
                                     </Grid>
                                     <Grid Grid.Row="1">
                                         <Grid>
