--- a/GradingSystem/View/Admin/ManageEnrollment.xaml
+++ b/GradingSystem/View/Admin/ManageEnrollment.xaml
@@ -31,12 +31,13 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <!-- Search and Enroll Button -->
+                        <!-- Search and Enroll Button Section -->
                         <Grid Grid.Row="0" Effect="{StaticResource MaterialDesignElevationShadow1}">
                             <materialDesign:Card Padding="5">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="auto"/>
                                         <ColumnDefinition Width="auto"/>
                                     </Grid.ColumnDefinitions>
@@ -51,9 +52,19 @@
 
                                     <!-- Enroll Button -->
                                     <Grid Grid.Column="2">
-                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="EnrollStudentBtn">
+                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" 
+                                                Margin="0 0 5 0" Click="EnrollStudentBtn">
                                             <StackPanel>
                                                 <materialDesign:PackIcon Kind="Add" Height="20"/>
+                                            </StackPanel>
+                                        </Button>
+                                    </Grid>
+
+                                    <!-- Refresh Button -->
+                                    <Grid Grid.Column="3">
+                                        <Button Style="{StaticResource MaterialDesignFlatDarkBgButton}" Width="100" Click="RefreshButton_Click">
+                                            <StackPanel>
+                                                <materialDesign:PackIcon Kind="Refresh" Height="20"/>
                                             </StackPanel>
                                         </Button>
                                     </Grid>
@@ -64,9 +75,9 @@
                         <!-- DataGrid for Enrollment -->
                         <Grid Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                             <DataGrid x:Name="EnrollmentDataGrid" Style="{StaticResource DataGridStyle1}"
-                                      RowStyle="{DynamicResource DataGridRowStyle1}"
+                                      RowStyle="{DynamicResource DataGridRowStyle1}" SelectionMode="Single" SelectionUnit="FullRow"
                                       ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" 
-                                      CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Students}"
+                                      CellStyle="{DynamicResource DataGridCellStyle1}" ItemsSource="{Binding Enrollments}"
                                       AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
                                 <DataGrid.Columns>
