--- a/GradingSystem/View/Admin/Dialogs/AddSubject.xaml
+++ b/GradingSystem/View/Admin/Dialogs/AddSubject.xaml
@@ -110,14 +110,6 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <!-- Subject ID -->
-                                        <TextBlock Text="Course ID" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
-                                        <TextBox x:Name="SubjectIdText"
-                                                 Style="{StaticResource MaterialDesignFilledTextBox}" 
-                                                 Height="25" Width="200" FontSize="15" HorizontalAlignment="left" Margin="30 0 0 0"
-                                                 Grid.Column="1" Grid.Row="0" Padding="10 0 0 0">
-                                        </TextBox>
-
                                         <!-- Course Code -->
                                         <TextBlock Grid.Row="1" Text="Course Code" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         <TextBox x:Name="CourseCodeTxt"
@@ -166,7 +158,7 @@
                                         </ComboBox>
 
                                         <!-- Semester -->
-                                        <TextBlock Grid.Row="6" Text="Year Level" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
+                                        <TextBlock Grid.Row="6" Text="Semester" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="15"/>
                                         
                                         <ComboBox x:Name="SemesterCmb" Style="{StaticResource MaterialDesignFilledComboBox}" 
                                                   HorizontalAlignment="left" Margin="30 0 0 0" Height="25" Width="200" FontSize="15"
