--- a/GradingSystem/View/Encoder/EncoderMainWindow.xaml
+++ b/GradingSystem/View/Encoder/EncoderMainWindow.xaml
@@ -40,6 +40,16 @@
                             </Button>
                         </ListViewItem>
 
+                        <!-- Enrollment -->
+                        <ListViewItem HorizontalAlignment="Center" Margin="0 0">
+                            <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
+HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="black" Click="EnrollmentBtn">
+                                <StackPanel Margin="-5">
+                                    <materialDesign:PackIcon Kind="SchoolOutline" Foreground="White"/>
+                                </StackPanel>
+                            </Button>
+                        </ListViewItem>
+
                         <!-- Grades -->
                         <ListViewItem HorizontalAlignment="Center" Margin="0 0">
                             <Button Style="{StaticResource MaterialDesignFloatingActionButton}"
